perf: list